flux/namespaces.yml
apiVersion: v1
kind: Namespace
metadata:
  labels:
    name: k8ty-melvin
  name: k8ty-melvin
