flux/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: k8ty-melvin
  namespace: k8ty-melvin
  labels:
    app: k8ty-melvin
  annotations:
    fluxcd.io/automated: "true"
spec:
  replicas: 1
  selector:
    matchLabels:
      app: k8ty-melvin
  template:
    metadata:
      labels:
        app: k8ty-melvin
    spec:
      containers:
        - name: k8ty-melvin
          image: ghcr.io/k8ty-app/melvin:latest
          imagePullPolicy: Always
          stdin: true
          tty: true
          ports:
            - name: http
              containerPort: 9000
          livenessProbe:
            httpGet:
              path: /_health
              port: 9000
          readinessProbe:
            httpGet:
              path: /_health
              port: 9000
          resources: { }
---
