flux/service.yml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: k8ty-melvin
  name: k8ty-melvin
  namespace: k8ty-melvin
spec:
  type: ClusterIP
  selector:
    app: k8ty-melvin
  ports:
    - port: 9000
      name: http
      targetPort: 9000
